--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
   <div id="cesiumContainer"></div>
   <script>
     var viewer = new Cesium.Viewer('cesiumContainer');
+    var scene = viewer.scene;
+
+    var modelMatrix = Cesium.Transforms.eastNorthUpToFixedFrame(
+      Cesium.Cartesian3.fromDegrees(-75.62898254394531, 40.02804946899414, 0.0));
+
+    var model = scene.primitives.add(Cesium.Model.fromGltf({
+      url : 'data/bbb.gltf',
+      modelMatrix : modelMatrix,
+      scale : 20000.0
+    }));
+
+
   </script>
 </body>
 </html>
